fixed button on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,6 @@ div.betrayalMenuOptions p {
 	user-select: none;
 }
 
-#navbartmp {
-	width: 100%;
-}
 
 .navbar-fixed {
   position: fixed;
